--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -137,6 +137,10 @@
               href: /rest/api/time-series-insights/preview-env
             - name: Expressie en syntaxis van Time Series
               href: /rest/api/time-series-insights/preview-tsx
+    - name: Client-SDK
+      items:
+        - name: JavaScript-client-SDK
+          href: 'https://github.com/microsoft/tsiclient/blob/master/docs/API.md'
 - name: Verwant
   items:
     - name: Oplossingen
