--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -86,6 +86,8 @@
       href: cal-s4h.md
     - name: Configuraties en bewerkingen van SAP HANA-infrastructuur in Azure
       href: hana-vm-operations.md
+    - name: Configuraties van SAP HANA in virtuele Azure-machineopslag
+      href: hana-vm-operations-storage.md
     - name: Beschikbaarheid van SAP HANA in virtuele Azure-machines
       items:
         - name: Overzicht van de beschikbaarheid van SAP HANA in Azure
