--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -121,6 +121,8 @@
           href: api-management-howto-manage-protocols-ciphers.md
     - name: De ontwikkelaarservaring aanpassen
       items:
+        - name: De nieuwe ontwikkelaarsportal openen en aanpassen
+          href: api-management-howto-developer-portal.md
         - name: Pagina-inhoud en -indeling wijzigen
           href: api-management-modify-content-layout.md
         - name: Systeempagina's aanpassen met behulp van sjablonen
