--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -12,6 +12,8 @@
       href: workloads/oracle/oracle-considerations.md
     - name: SAP
       href: workloads/sap/get-started.md
+    - name: High Performance Computing
+      href: workloads/hpc/configure.md
     - name: Mainframe opnieuw hosten
       href: workloads/mainframe-rehosting/overview.md
 - name: Klassieke implementaties
