commit translated contents

--- a/articles/azure-maps/index.yml
+++ b/articles/azure-maps/index.yml
@@ -13,7 +13,7 @@ metadata:
   ms.date: 02/14/2019
   ms.author: philmea
 abstract:
-  description: 'Azure Maps biedt ontwikkelaars uit alle branches krachtige georuimtelijke mogelijkheden, gecombineerd met de meest recente kaartgegevens die beschikbaar zijn, om mobiele en webapplicaties te voorzien van geografische context. Azure Maps is een Azure One API-conforme set REST API''s voor kaarten, zoekfunctionaliteit, routebeschrijvingen, verkeer, tijdzones, geolocatie, geofencing, kaartgegevens en ruimtelijke bewerkingen, aangevuld met web- en Android-SDK''s om het ontwikkelproces eenvoudig, flexibel en platformoverstijgend te maken.'
+  description: 'Azure Maps biedt ontwikkelaars uit alle branches krachtige georuimtelijke mogelijkheden, gecombineerd met de meest recente kaartgegevens die beschikbaar zijn, om mobiele en webapplicaties te voorzien van geografische context. Azure Maps is een Azure One API-conforme set REST API''s voor kaarten, zoekfunctionaliteit, routebeschrijvingen, verkeer, mobiliteit, tijdzones, geolocatie, geofencing, kaartgegevens en ruimtelijke bewerkingen, aangevuld met web- en Android-SDK''s om het ontwikkelproces eenvoudig, flexibel en platformoverstijgend te maken.'
 sections:
   - title: QuickStarts van vijf minuten
     items:
@@ -54,4 +54,4 @@ sections:
           - title: Javascript
             html: '<p><a href="https://docs.microsoft.com/javascript/api/azure-maps-javascript/">Kaartbesturingselement</a></p>'
           - title: REST
-            html: '<p><a href="https://docs.microsoft.com/rest/api/maps/data">Gegevensservice</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/geolocation">Geolocatie-service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/render">Service voor rendering</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/route">Routeservice</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/search">Zoekservice</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/spatial">Ruimtelijke service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/timezone">Tijdzone-service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/traffic">Verkeersservice</a></p>'
+            html: '<p><a href="https://docs.microsoft.com/rest/api/maps/data">Gegevensservice</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/geolocation">Geolocatie-service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/mobility">Mobility-service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/render">Service voor rendering</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/route">Routeservice</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/search">Zoekservice</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/spatial">Ruimtelijke service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/timezone">Tijdzone-service</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/traffic">Verkeersservice</a></p>'
