--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -97,6 +97,9 @@
             - name: 'Java (Windows, macOS, Linux)'
               href: quickstart-virtual-assistant-java-jre.md
               displayName: 'virtual assistant, speech-enabled bot, conversational agent'
+            - name: Java (Android)
+              href: quickstart-virtual-assistant-java-android.md
+              displayName: 'virtual assistant, speech-enabled bot, conversational agent'
     - name: REST-API’s
       items:
         - name: Lijst met ondersteunde stemmen per regio
