--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -7,8 +7,7 @@
       displayName: overview
       href: what-is-ml-studio.md
     - name: Onze ML-producten vergelijken
-      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
-      maintainContext: true
+      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/studio/context/ml-context
 - name: Zelfstudies
   items:
     - name: Uw eerste experiment opzetten
