--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -3,5 +3,4 @@
 - name: Azure Machine Learning Studio
   href: studio/index.yml
 - name: Machine learning-producten vergelijken op de Microsoft-site
-  href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
-  maintainContext: true
+  href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/context/ml-context
