--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -64,7 +64,7 @@ sections:
         className: cardsD
         items:
           - title: Previews
-            html: '<p><a href="stream-analytics-previews#public-previews">Openbare previews</a></p><p><a href="stream-analytics-previews#private-previews">Beperkte previews</a></p>'
+            html: '<p><a href="stream-analytics-previews#public-previews">Openbare previews</a></p><p><a href="stream-analytics-previews#other-previews">Beperkte previews</a></p>'
           - title: Opdrachtregel
             html: '<p><a href="https://docs.microsoft.com/powershell/module/az.streamanalytics/#stream_analytics">Azure PowerShell</a></p>'
           - title: Talen
