--- a/articles/traffic-manager/index.yml
+++ b/articles/traffic-manager/index.yml
@@ -6,7 +6,7 @@ metadata:
   title: Traffic Manager
   meta.description: 'Learn how to use Traffic Manager to route incoming traffic for optimal application performance and reliability. Quickstarts, tutorials, samples, and more, show how to manage traffic to Azure or external service endpoints.'
   services: traffic-manager
-  author: KumudD
+  author: asudbring
   manager: twooley
   layout: LandingPage
   ms.service: traffic-manager
@@ -14,7 +14,7 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 02/28/2019
-  ms.author: kumud
+  ms.author: allensu
 abstract:
   description: 'Informatie over het gebruik van Azure Traffic Manager. Met behulp van snelstarts, zelfstudies, voorbeelden en meer wordt uitgelegd hoe u binnenkomend verkeer kunt beheren voor optimale toepassingsprestaties. Ook vindt u hier informatie over hoe u verkeer naar Azure of naar externe service-eindpunten kunt distribueren.'
 sections:
