--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -22,6 +22,7 @@
         - name: Azure PowerShell
           href: event-hubs-quickstart-powershell.md
         - name: Azure Resource Manager-sjabloon
+          displayName: ARM
           href: event-hubs-resource-manager-namespace-event-hub.md
     - name: Gebeurtenissen verzenden en ontvangen
       items:
